--- a/.github/workflows/eternity_convert.yml
+++ b/.github/workflows/eternity_convert.yml
@@ -7,6 +7,9 @@ on:
       - 'Eternity'
       
   workflow_dispatch:
+  # 解决方案
+permissions:
+  contents: write
 jobs:
   deploy:
     runs-on: ubuntu-latest
