--- a/.github/workflows/sub_merge.yml
+++ b/.github/workflows/sub_merge.yml
@@ -8,6 +8,9 @@ on:
     # - cron: '*/5 * * * *'
     # 表达式生成  https://crontab.guru/
     - cron: '* */5 * * *'
+    # 解决方案
+permissions:
+  contents: write
 
 jobs:
   deploy:
