--- a/.github/workflows/sub_merge.yml
+++ b/.github/workflows/sub_merge.yml
@@ -34,6 +34,7 @@ jobs:
     - name: 安装依赖
       run: |
         pip install -r ./utils/requirements.txt
+        pip install geoip2
     - name: 执行任务
       # env:
       #   CONFIG: ${{ secrets.CONFIG }}
@@ -51,5 +52,5 @@ jobs:
     - name: 推送更改
       uses:  ad-m/github-push-action@master
       with:
-         github_token: ${{ secrets.Deploy }}
+        #   github_token: ${{ secrets.Deploy }}
          branch: master
