--- a/.github/workflows/sub_merge.yml
+++ b/.github/workflows/sub_merge.yml
@@ -7,7 +7,7 @@ on:
   schedule:
     # - cron: '*/5 * * * *'
     # 表达式生成  https://crontab.guru/
-    - cron: '* */5 * * *'
+    - cron: '1 1 1 1 1'
     # 解决方案
 permissions:
   contents: write
